--- a/index.html
+++ b/index.html
@@ -883,6 +883,6 @@ You can vote and make decisions on the XYM testnet. Feel free to try it out (I r
 <h2 line-start="77" line-end="77" id="開発者連絡先">開発者・連絡先</h2>
 <p line-start="78" line-end="78">質問、不具合、感想など遠慮なくご連絡ください。</p>
 <p line-start="80" line-end="81">Xアカウント <a href="https://twitter.com/Hiro25519" line-start="80" line-end="80">@Hiro25519</a><br>
-所属：提示内容について現在調整中</p></div>
+所属：関西テレビソフトウェア株式会社</p></div>
   </body>
 </html>
