--- a/init.html
+++ b/init.html
@@ -145,6 +145,7 @@ const CONFIG_SYMBOL_APPLICATION = {
 	testnet:"TEST_NET"
 };
 
+setTimeout(()=>{
 startSymbolApplication(
 
 	CONFIG_SYMBOL_APPLICATION,
@@ -190,6 +191,7 @@ startSymbolApplication(
 	async function(nodeSocket){},	//onSocketResumed ソケット接続回復時
 	async function(){/* onVisible 画面フォーカス回復時     */}
 );
+},500);
 
 async function showModalCreate(type){
 	walletType = type;
