add settimeout for SSS

--- a/edit.html
+++ b/edit.html
@@ -257,7 +257,7 @@ let confirmId;
 let transactionId;
 let voteId;
 $('#spinner_ready').collapse('show');
-
+setTimeout(()=>{
 startSymbolApplication(
 
 	CONFIG_SYMBOL_APPLICATION,
@@ -350,6 +350,7 @@ startSymbolApplication(
 	},	//onSocketResumed ソケット接続回復時
 	async function(){/* onVisible 画面フォーカス回復時     */}
 );
+},500);
 
 function getParams(params,key,defaultValue){
 	let item = params.get(key);
