--- a/init.html
+++ b/init.html
@@ -38,12 +38,13 @@
 <h1>みんなの憲章</h1>
 <div id="output" class="div-list"></div>
 <hr>
-<h4>ドキュメント新規作成ツール</h4>
+<h4>新規ドキュメント作成ツール</h4>
 
-ドキュメントを新規作成します。
+ドキュメントを新規作成します。<br>
 SSSで作成を選択すると、SSSで管理しているアカウントが所有するモザイクから議決トークンと初期投票トークンを選択できます。
 Demo用作成を選択すると、ページ内に埋め込んだ秘密鍵が所有するモザイクから議決トークンと初期投票トークンを選択します。
-
+議決トークンは一度決めたら変更することはできません。投票トークンは提案の度に指定することができます。
+ここで決めた投票トークンは新規作成時のみ議決に必要で、その後デフォルト値として設定されます。<br>
 <br>
 <button onclick="showModalCreate('sss')">SSSで作成</button>
 <button onclick="showModalCreate('self')">Demo用作成</button>
